--- a/aws/frontend/static/wrapper.css
+++ b/aws/frontend/static/wrapper.css
@@ -1,9 +1,8 @@
-* {
-    overflow: hidden;
-    height: 100vh;
+#fixed-area {
+    width: 100vw;
+    height: 100%;
 }
 
 iframe {
     border: none;
-    width: 100%;
 }
