--- a/aws/frontend/templates/wrapper.html
+++ b/aws/frontend/templates/wrapper.html
@@ -15,38 +15,6 @@
 </head>
 
 <body>
-    <!-- <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper  light-blue darken-1 hide-on-med-and-down" id='header'>
-                <h href="#!" class="brand-logo center">
-                    Fallod
-                </h>
-                <ul class="right">
-                    <a href="help" id="help" target="_blank">help</a>
-                </ul>
-            </div>
-            <a href="#" class="sidenav-trigger right" data-target="mobile-links">
-                <i class="material-icons">menu</i>
-            </a>
-        </nav>
-        <ul class="sidenav" id="mobile-links">
-            <a href="#" class="sidenav-close " data-target="mobile-links">
-                <i class="material-icons close-icon">close</i>
-            </a>
-
-            <div class="menu">
-                <li><a href="#">Contents1</a></li>
-                <li><a href="#">Contents2</a></li>
-                <li><a href="#">Contents3</a></li>
-                <li><a href="#">Contents4</a></li>
-            </div>
-        </ul>
-    </div>
-
-    <ul class="sidenav" id="mobile-links">
-        <li><a href="help" target="_blank">help</a></li>
-    </ul> -->
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper  light-blue darken-1" id='header'>
@@ -69,7 +37,7 @@
         <li><a href="help" target="_blank">help</a></li>
     </ul>
 
-    <div class="container" id="fixed-area">
+    <div id="fixed-area">
         <iframe src="./map.html"></iframe>
     </div>
 
