--- a/aws/frontend/static/wrapper.css
+++ b/aws/frontend/static/wrapper.css
@@ -1,7 +1,9 @@
-#fixed-area {
+html, body { height: 100%; }
+
+/* #fixed-area {
     width: 100%;
     height: 100vh;
-}
+} */
 
 iframe {
     border: none;
