--- a/aws/frontend/static/wrapper.css
+++ b/aws/frontend/static/wrapper.css
@@ -1,9 +1,9 @@
 html, body { height: 100%; }
 
-/* #fixed-area {
+#fixed-area {
     width: 100%;
-    height: 100vh;
-} */
+    height: 100%;
+}
 
 iframe {
     border: none;
