--- a/aws/frontend/templates/wrapper.html
+++ b/aws/frontend/templates/wrapper.html
@@ -18,9 +18,9 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper  light-blue darken-1" id='header'>
-                <h href="#!" class="brand-logo center" id="nico_font">
+                <h3 href="#!" class="brand-logo center" id="nico_font">
                     Fallod
-                </h>
+                </h3>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                     <i class="material-icons">
                         menu
