--- a/aws/frontend/static/wrapper.css
+++ b/aws/frontend/static/wrapper.css
@@ -5,6 +5,10 @@ html, body { height: 100%; }
     height: 100vh;
 }
 
+#nico_font{
+    font-size: 45px
+}
+
 iframe {
     width:100vw;
     height: 100vh;
